smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-unclosed-list1.smithy
// Parse error at line 4, column 1 near `string`: Expected one of [RBRACKET, COMMA]
namespace com.foo
@tags(["foo", "bar"
string MyString
